renamed filled donut to jelly donut

--- a/src/main/resources/assets/cozycafe/lang/en_us.json
+++ b/src/main/resources/assets/cozycafe/lang/en_us.json
@@ -8,7 +8,7 @@
   "item.cozycafe.chocolate_donut": "Chocolate Donut",
   "item.cozycafe.chocolate_milk": "Chocolate Milk",
   "item.cozycafe.croissant": "Croissant",
-  "item.cozycafe.filled_donut": "Filled Donut",
+  "item.cozycafe.jelly_donut": "Jelly Donut",
   "item.cozycafe.fries": "Fries",
   "item.cozycafe.gilded_melonade": "Gilded Melonade",
   "item.cozycafe.glowberry_donut": "Glowberry Donut",
