--- a/src/main/resources/assets/cozycafe/lang/en_us.json
+++ b/src/main/resources/assets/cozycafe/lang/en_us.json
@@ -36,6 +36,9 @@
   "item.cozycafe.nuhtella_toast": "Nuhtella Toast",
   "item.cozycafe.toast_with_butter": "Toast with Butter",
   "item.cozycafe.toast_with_jam": "Toast with Jam",
+  "item.cozycafe.brownie": "Brownie",
+  "item.cozycafe.waffle_with_chocolate_syrup": "Waffle with Chocolate Syrup",
+  "item.cozycafe.waffle_with_fruit_syrup": "Waffle with Fruit Syrup",
 
   "itemgroup.cozycafe":"Cozy Café"
 }
