more recipes, renamed gilded melonade to glistering melonade (didn't know the melon was called glistering melon lol)

--- a/src/main/resources/assets/cozycafe/lang/en_us.json
+++ b/src/main/resources/assets/cozycafe/lang/en_us.json
@@ -9,7 +9,7 @@
   "item.cozycafe.chocolate_milk": "Chocolate Milk",
   "item.cozycafe.jelly_donut": "Jelly Donut",
   "item.cozycafe.fries": "Fries",
-  "item.cozycafe.gilded_melonade": "Gilded Melonade",
+  "item.cozycafe.gilded_melonade": "Glistering Melonade",
   "item.cozycafe.glowberry_donut": "Glowberry Donut",
   "item.cozycafe.glowberry_ice_cream": "Glowberry Ice Cream",
   "item.cozycafe.glowberry_juice": "Glowberry Juice",
