more recipe, renamed sugar donut to glazed donut

--- a/src/main/resources/assets/cozycafe/lang/en_us.json
+++ b/src/main/resources/assets/cozycafe/lang/en_us.json
@@ -9,7 +9,7 @@
   "item.cozycafe.chocolate_milk": "Chocolate Milk",
   "item.cozycafe.jelly_donut": "Jelly Donut",
   "item.cozycafe.fries": "Fries",
-  "item.cozycafe.gilded_melonade": "Glistering Melonade",
+  "item.cozycafe.glistering_melonade": "Glistering Melonade",
   "item.cozycafe.glowberry_donut": "Glowberry Donut",
   "item.cozycafe.glowberry_ice_cream": "Glowberry Ice Cream",
   "item.cozycafe.glowberry_juice": "Glowberry Juice",
@@ -20,7 +20,7 @@
   "item.cozycafe.nuhtella_ice_cream": "Nuhtella Ice Cream",
   "item.cozycafe.pot_pie": "Pot Pie",
   "item.cozycafe.pretzel": "Pretzel",
-  "item.cozycafe.sugar_donut": "Sugar Donut",
+  "item.cozycafe.glazed_donut": "Glazed Donut",
   "item.cozycafe.sweetberry_donut": "Sweetberry Donut",
   "item.cozycafe.sweetberry_ice_cream": "Sweetberry Ice Cream",
   "item.cozycafe.sweetberry_juice": "Sweetberry Juice",
