added 3 new items - veggie ramen, dino nuggets and pavlova, a few more items are no longer snacks

--- a/src/main/resources/assets/cozycafe/lang/en_us.json
+++ b/src/main/resources/assets/cozycafe/lang/en_us.json
@@ -57,6 +57,9 @@
   "item.cozycafe.creme_brulee": "Crème Brûlée",
   "item.cozycafe.marble_cake": "Marble Cake",
   "item.cozycafe.shepherds_pie": "Shepherds Pie",
+  "item.cozycafe.dino_nuggets": "Dino Nuggets",
+  "item.cozycafe.pavlova": "Pavlova",
+  "item.cozycafe.veggie_ramen": "Veggie Ramen",
 
   "itemgroup.cozycafe":"Cozy Café"
 }
