added chocolate bar - the last item before the 1.0 release

--- a/src/main/resources/assets/cozycafe/lang/en_us.json
+++ b/src/main/resources/assets/cozycafe/lang/en_us.json
@@ -60,6 +60,7 @@
   "item.cozycafe.dino_nuggets": "Dino Nuggets",
   "item.cozycafe.pavlova": "Pavlova",
   "item.cozycafe.veggie_ramen": "Veggie Ramen",
+  "item.cozycafe.chocolate_bar": "Chocolate Bar",
 
   "itemgroup.cozycafe":"Cozy Café"
 }
